fix css overflow issue

--- a/src/pages/StockList/stockList.module.css
+++ b/src/pages/StockList/stockList.module.css
@@ -8,7 +8,7 @@
 
 .headerContainer {
   background-color: #2c53f5;
-  overflow: scroll;
+  overflow: hidden;
 }
 
 .stockHeader {
